# takodachi-bot

./: .gitignore  build.py  pyproject.toml  requirements.txt  takodachi.spec  todo.md
scripts/: takodachi-bot-debug.bat  takodachi-bot-start.bat  takodachi-bot-status.bat
src/: configs.py  helper.py  takodachi.py  takodachi.pyw
src/modules/: services_manager.py
src/modules/app_module/: app_icon.py
src/modules/discord_bot_module/: discord_bot.py  service.py
src/modules/discord_bot_module/cogs/: archive.py
src/modules/volume_control_module/: service.py  volume_control.py
src/takodachi_bot/: configs.py  takodachi.py
