[project]
name = "takodachi-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog==6.10.1",
    "comtypes==1.4.16",
    "discord-py==2.7.1",
    "pillow>=12.2.0",
    "psutil==7.2.2",
    "pycaw==20240210",
    "pystray==0.19.5",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]

[tool.uv]
package = true

[project.scripts]
bot = "takodachi_bot.takodachi:main"